# ChangeLog for media-video/mplayer2
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Feb 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20111126.ebuild,
  mplayer2-9999.ebuild:
  update linuxtv-dvb-headers category, bug #403929, thanks to Muzer and
  timemanx

  01 Dec 2011; Nikoli <nikoli@lavabit.com> -mplayer2-2.0_p20110904.ebuild,
  mplayer2-2.0_p20111126.ebuild, mplayer2-9999.ebuild, metadata.xml:
  sync with portage, remove old

*mplayer2-2.0_p20111126 (28 Nov 2011)

  28 Nov 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20111126.ebuild:
  new snapshot

  01 Nov 2011; Nikoli <nikoli@lavabit.com> -mplayer2-2.0.ebuild,
  -mplayer2-2.0_p20110705.ebuild, -mplayer2-2.0_p20110805.ebuild,
  mplayer2-2.0_p20110904.ebuild, mplayer2-9999.ebuild:
  rename USE v4l2 to v4l while removing support for video4linux 1.x, bug
  #385241

  30 Oct 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20110904.ebuild,
  mplayer2-9999.ebuild:
  OSD menu was removed upstream, add ~ppc ~ppc64 keywords, better REQUIRED_USE
  usage, fix USE cddb and rsound automagic

*mplayer2-2.0_p20110904 (04 Sep 2011)

  04 Sep 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20110904.ebuild:
  add snapshot

  07 Aug 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20110805.ebuild,
  mplayer2-9999.ebuild:
  sync keywords with portage

*mplayer2-2.0_p20110805 (06 Aug 2011)

  06 Aug 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20110805.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  add snapshot, upstream renamed ass option to libass

*mplayer2-2.0_p20110705 (05 Jul 2011)

  05 Jul 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20110705.ebuild:
  add snapshot

  01 Jul 2011; Nikoli <nikoli@lavabit.com> mplayer2-2.0.ebuild,
  mplayer2-9999.ebuild, metadata.xml:
  remove support for internal ffmpeg, cosmetics

  10 May 2011; Nikoli <nikoli@lavabit.com> mplayer2-9999.ebuild:
  upstream removed xvmc support
