@@ -2,7 +2,7 @@ DIST font-arial-cp1250.tar.bz2 249705 RMD160 a2fc7ae07b0d80936ea58e168e1047efccb
 DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e7c2aacbcd SHA1 152c40bf20de34aa8802d7f80d34d673b0b67212 SHA256 9730f481764f367c9089d0166fb6ccf9148808ffbbfeca635cf0e6db75765d29
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST mplayer2-2.0_p20111126.tar.xz 3334504 RMD160 8fb6dc468cc754a87589ff5099c7ee68551dd69a SHA1 57e9449adfedf19a97be1ec1e6602fa2289aa698 SHA256 95229eac3b1c481462fdb720caa2f6a8754b4f38ce70c6a328e18f8548add16d
-EBUILD mplayer2-2.0_p20111126.ebuild 16718 RMD160 7b8a556cf9eda13099ec21745cdd075f376e9acb SHA1 df4589d5c070420093a7cf19a7e5200e7cdc83a3 SHA256 1ed22d519d52f2efb232b876f3d3943fc405ab36edd2796bc944f73fe7d4e063
-EBUILD mplayer2-9999.ebuild 16710 RMD160 48868703327e96b83b401d5d4d002df274ba3f61 SHA1 a6a6aa168ef03f03d3093882694f65aaa91bed27 SHA256 c1fef9858d582ccaf98536f5e39adc5182b473b5da052263488a0036f370507b
-MISC ChangeLog 5488 RMD160 011e0791fdc5b449ea372ea8e3f3ddcc52a4e179 SHA1 d2e31daa48f230f17e6eec78f4a3d8686fc838d0 SHA256 b367126a670d10ed0cfe4c75b1ba573273c01550a4d73e7b26dbdb53a637062e
+EBUILD mplayer2-2.0_p20111126.ebuild 16579 RMD160 f8c9ad8b677fc57e13ee6f445126772cc63063b6 SHA1 f353339c53fd0bb18789cc070bafcaa3fce15a4d SHA256 e7377bb48f2966166185401a13fae7ae9bbd1c0d1c8c749645fb11c145e5311c
+EBUILD mplayer2-9999.ebuild 16578 RMD160 259c56dc6733e4da666ff84d7377c712d6632ff6 SHA1 c62222147474a94457121e3acc1a3bf1a4b81e74 SHA256 6a1ccae1b0bb118fb6e031489724e71063437a3d6da4f43310c2719cc67f7541
+MISC ChangeLog 5659 RMD160 c60102fca37d6492316e3dc84622656fd1f84ace SHA1 cdb360ceb42b08df737d6c45a902762cd6ec9357 SHA256 05d946412cf6282275453fc1bc180ac21488145462bb9176b3af1809f662bec4
 MISC metadata.xml 4045 RMD160 1164dbcf2589db4faf609c819592fffa88489ded SHA1 edb3a67eb6246e3e190810cbf7d118b23919bcd5 SHA256 13e5f9cb420b9160e7e4ae091d0ef57fe53bcdb7b10b9c873be8331312c1faa7
