@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Mar 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20111126.ebuild,
+  mplayer2-9999.ebuild:
+  remove obsolete dga and esd USE, update libav dep, disable broken lib
+
   21 Feb 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20111126.ebuild,
   mplayer2-9999.ebuild:
   update linuxtv-dvb-headers category, bug #403929, thanks to Muzer and
